[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["full","tracing"]}
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
